2006-06-28  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile (HURDLIBS): Add `iohelp' and `ports'.

2004-02-10  Roland McGrath  <roland@frob.com>

	* start-translator-long.c (service_fsys_startup): Move mach_msg_type_t
	const variables inside the function, make them auto so they are
	optimized away to integer constants.
	Use a union instead of casts to do efficient type checking.

2002-06-26  Marcus Brinkmann  <marcus@gnu.org>

	* lock-acquire.c (fshelp_acquire_lock): Also wait for exclusive
	locks which might have been acquired while we were waiting for
	shared locks to finish.

2002-06-07  Roland McGrath  <roland@frob.com>

	* fshelp.h: Use io_statbuf_t in place of struct stat throughout.
	(fshelp_get_identity): ino_t -> ino64_t

2002-05-10  Roland McGrath  <roland@frob.com>

	* exec-reauth.c (fshelp_exec_reauth): Always set *SECURE if nonnull,
	as the comment says we do.

2002-05-07  Roland McGrath  <roland@frob.com>

	* fetch-root.c (fshelp_fetch_root): int -> size_t
	* delegate.c (fshelp_delegate_translation): Likewise.

2002-03-05  Marcus Brinkmann  <marcus@gnu.org>

	* fshelp.h: Refer to dir_lookup, not dir_pathtrans, in comment.
	Reported by James A Morrison <ja2morri@student.math.uwaterloo.ca>.

2002-01-02  Roland McGrath  <roland@frob.com>

	* start-translator-long.c (fshelp_start_translator_long)
	[KERN_INVALID_LEDGER]: Pass extra args to task_create for OSF variant.

2001-06-21  Neal H Walfield  <neal@cs.uml.edu>

	* fshelp.h (fshelp_iscontroller): Declare new function.
	* perms-iscontroller.c: New file.
	* Makefile (SRCS): Add it.

2001-01-17  Neal H Walfield  <neal@cs.uml.edu>

	* fshelp.h: Add two new parameters to fshelp_open_fn_t:
	a port to the new task and a cookie.
	Add a new parameter, cookie, to fshelp_start_translator and
	fshelp_start_translator_long that will be passed to
	fshelp_open_fn_t.

	* fetch-root.c (fshelp_fetch_root): Conform to new
	fshelp_start_translator_long semantics.