@@ -1,3 +1,7 @@
+2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* touch.c (fshelp_touch): Adapt to ``struct stat'' changes.
+
 2006-06-28  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile (HURDLIBS): Add `iohelp' and `ports'.
